CSS fixes for #itemform_categories: max-height and border workaround for at least FF3.6: border was transparent when scrolling in the scroll-overflowed box.

--- a/blogs/rsc/css/admin.global.css
+++ b/blogs/rsc/css/admin.global.css
@@ -203,6 +203,17 @@ table.catselect td.selector {
 table.catselect #new_category_name {
 	background-color:white;
 }
+/* Limit height of .catselect container in item admin view */
+#itemform_categories {
+	max-height:500px;
+	overflow:scroll;
+}
+#itemform_categories {
+	border:none;
+}
+#itemform_categories table.catselect {
+	border:1px solid #9DB0BC;
+}
 
 
 /*
